fix bug student

--- a/LanguageCenter/appsettings.json
+++ b/LanguageCenter/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-7O6VGSE2;Database=LanguageCenterDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+        "DefaultConnection": "Server=localhost,1433;Database=LanguageCenterDB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
@@ -8,5 +8,20 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://localhost:5255"
+            },
+            "Https": {
+                "Url": "https://localhost:7272"
+            }
+        },
+        "Certificates": {
+            "Default": {
+                "Path": "",
+                "Password": ""
+            }
+        }
+    }
 }
